Sscs 12317 fix functional tests 4 (#3637)
* test coverage
checkstyle fixes

* test coverage

* empty commit

* cve suppression

* empty commit

* chart fixes

* added workallocation flag

* disable wa flag

---------

Co-authored-by: Andrei Trushkov <andrei.trushkov@hmcts.net>